--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-moviepy==1.0.3
-requests==2.31.0
-Pillow==10.1.0
-flask==3.0.0
+Flask==3.0.0
 gunicorn==21.2.0
+requests==2.31.0
+moviepy==1.0.3
 imageio-ffmpeg==0.4.9
-numpy==1.24.3
-decorator==4.4.2
-proglog==0.1.10
-tqdm==4.66.1
