--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ google-api-python-client
 google-auth
 google-auth-httplib2
 google-auth-oauthlib
-boto3
 botocore
+boto3==1.34.0
+googletrans==4.0.0-rc1
